# Anjay-mbedos

./: Anjay.lib  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  avs_commons.lib
examples/: example.cpp
include/anjay/: anjay_config.h
include/avsystem/coap/: avs_coap_config.h
include/avsystem/commons/: avs_commons_config.h
src/: avs_condvar_impl.cpp  avs_init_once_impl.cpp  avs_mbed_hacks.cpp  avs_mbed_hacks.h  avs_mbed_threading_structs.h  avs_mutex_impl.cpp  avs_socket_global.h  avs_time_impl.cpp  mbedtls_timing.c  timing_alt.h
src/avs_net_impl/: anjay_mbedos_posix_compat.h  avs_addrinfo_impl.cpp  avs_mbed_hacks.cpp  avs_mbed_hacks.h  avs_socket_impl.cpp  avs_socket_impl.h  avs_tcp_socket_impl.cpp  avs_udp_socket_impl.cpp
